modified:   css/style.css 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -158,7 +158,9 @@
 
     <footer>
       <div class="center">
-        Copyright &copy; www.myOnlineMeal.com. All rights reserved!
+        Copyright &copy;
+        <a href="https://iamaltaf786.github.io/Veg-Meal-On/">iamaltaf786</a>.
+        All rights reserved!
       </div>
     </footer>
   </body>
