--- a/index.html
+++ b/index.html
@@ -43,47 +43,172 @@
     </section>
 
     <!-- Add 10 new food cards and automatic Horizontal slider for dishes -->
-    <section id="services-container">
-      <h1 class="h-primary center">Our Services</h1>
-      <div id="services">
-        <div class="box">
-          <img src="img/1.png" alt="" />
-          <h2 class="h-secondary center">Food Catering</h2>
-          <p class="center">
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem,
-            culpa suscipit error Lorem ipsum dolor sit, amet consectetur
-            adipisicing elit. Et qui, repudiandae similique nam, recusandae
-            quidem ab asperiores ex, aut fugit labore veritatis facere? sint
-            delectus ab dolorum nam. Debitis facere, incidunt voluptates eos,
-            mollitia voluptatem iste sunt voluptas beatae facilis labore, omnis
-            sint quae eum.
-          </p>
-        </div>
-        <div class="box">
-          <img src="img/2.png" alt="" />
-          <h2 class="h-secondary center">Bulk Ordering</h2>
-          <p class="center">
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem,
-            culpa suscipit error Lorem ipsum dolor sit amet consectetur
-            adipisicing elit. Unde laudantium a incidunt animi ad, ab
-            dignissimos vero? Unde numquam odit repudiandae perferendis nisi.
-            sint delectus ab dolorum nam. Debitis facere, incidunt voluptates
-            eos, mollitia voluptatem iste sunt voluptas beatae facilis labore,
-            omnis sint quae eum.
-          </p>
-        </div>
-        <div class="box">
-          <img src="img/3.png" alt="" />
-          <h2 class="h-secondary center">Food Ordering</h2>
-          <p class="center">
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem,
-            culpa suscipit error Lorem ipsum dolor sit amet consectetur
-            adipisicing elit. Necessitatibus provident fugiat aliquam minima at
-            explicabo. Earum eveniet quaerat, sunt molestias nesciunt quas!
-            Quis. sint delectus ab dolorum nam. Debitis facere, incidunt
-            voluptates eos, mollitia voluptatem iste sunt voluptas beatae
-            facilis labore, omnis sint quae eum.
-          </p>
+
+    <!-- logos -> logo-container  logos-slide -> logo-container-slide -->
+    <section class="logo-container">
+      <!-- <h1 class="h-primary center">Our Services</h1> -->
+      <div id="services" class="logo-container-slide">
+        <div class="hori-box">
+          <div class="box" id="first-box">
+            <img
+              src="https://cdn.pixabay.com/photo/2015/12/11/17/25/clouds-1088472_1280.jpg"
+              alt=""
+            />
+            <h2 class="h-secondary center">Food Catering 1</h2>
+            <p class="center">
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem,
+              culpa suscipit error Lorem ipsum dolor sit, amet consectetur
+              adipisicing elit. Et qui, repudiandae similique nam, recusandae
+              quidem ab asperiores ex, aut fugit labore veritatis facere? sint
+              delectus ab dolorum nam. Debitis facere, incidunt voluptates eos,
+              mollitia voluptatem iste sunt voluptas beatae facilis labore,
+              omnis sint quae eum.
+            </p>
+          </div>
+          <div class="box">
+            <img
+              src="https://w0.peakpx.com/wallpaper/837/414/HD-wallpaper-cloudy-day-tree-nature-cloud-field.jpg"
+              alt=""
+            />
+            <h2 class="h-secondary center">Bulk Ordering 2</h2>
+            <p class="center">
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem,
+              culpa suscipit error Lorem ipsum dolor sit amet consectetur
+              adipisicing elit. Unde laudantium a incidunt animi ad, ab
+              dignissimos vero? Unde numquam odit repudiandae perferendis nisi.
+              sint delectus ab dolorum nam. Debitis facere, incidunt voluptates
+              eos, mollitia voluptatem iste sunt voluptas beatae facilis labore,
+              omnis sint quae eum.
+            </p>
+          </div>
+          <div class="box">
+            <img
+              src="https://cdn.pixabay.com/photo/2015/07/05/10/18/tree-832079_1280.jpg"
+              alt=""
+            />
+            <h2 class="h-secondary center">Food Ordering 3</h2>
+            <p class="center">
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem,
+              culpa suscipit error Lorem ipsum dolor sit amet consectetur
+              adipisicing elit. Necessitatibus provident fugiat aliquam minima
+              at explicabo. Earum eveniet quaerat, sunt molestias nesciunt quas!
+              Quis. sint delectus ab dolorum nam. Debitis facere, incidunt
+              voluptates eos, mollitia voluptatem iste sunt voluptas beatae
+              facilis labore, omnis sint quae eum.
+            </p>
+          </div>
+          <div class="box">
+            <img
+              src="https://cdn.pixabay.com/photo/2015/12/11/17/25/clouds-1088472_1280.jpg"
+              alt=""
+            />
+            <h2 class="h-secondary center">Food Catering 4</h2>
+            <p class="center">
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem,
+              culpa suscipit error Lorem ipsum dolor sit, amet consectetur
+              adipisicing elit. Et qui, repudiandae similique nam, recusandae
+              quidem ab asperiores ex, aut fugit labore veritatis facere? sint
+              delectus ab dolorum nam. Debitis facere, incidunt voluptates eos,
+              mollitia voluptatem iste sunt voluptas beatae facilis labore,
+              omnis sint quae eum.
+            </p>
+          </div>
+          <div class="box">
+            <img
+              src="https://w0.peakpx.com/wallpaper/837/414/HD-wallpaper-cloudy-day-tree-nature-cloud-field.jpg"
+              alt=""
+            />
+            <h2 class="h-secondary center">Bulk Ordering 5</h2>
+            <p class="center">
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem,
+              culpa suscipit error Lorem ipsum dolor sit amet consectetur
+              adipisicing elit. Unde laudantium a incidunt animi ad, ab
+              dignissimos vero? Unde numquam odit repudiandae perferendis nisi.
+              sint delectus ab dolorum nam. Debitis facere, incidunt voluptates
+              eos, mollitia voluptatem iste sunt voluptas beatae facilis labore,
+              omnis sint quae eum.
+            </p>
+          </div>
+          <div class="box">
+            <img
+              src="https://cdn.pixabay.com/photo/2015/07/05/10/18/tree-832079_1280.jpg"
+              alt=""
+            />
+            <h2 class="h-secondary center">Food Ordering 6</h2>
+            <p class="center">
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem,
+              culpa suscipit error Lorem ipsum dolor sit amet consectetur
+              adipisicing elit. Necessitatibus provident fugiat aliquam minima
+              at explicabo. Earum eveniet quaerat, sunt molestias nesciunt quas!
+              Quis. sint delectus ab dolorum nam. Debitis facere, incidunt
+              voluptates eos, mollitia voluptatem iste sunt voluptas beatae
+              facilis labore, omnis sint quae eum.
+            </p>
+          </div>
+          <div class="box">
+            <img
+              src="https://cdn.pixabay.com/photo/2015/12/11/17/25/clouds-1088472_1280.jpg"
+              alt=""
+            />
+            <h2 class="h-secondary center">Food Catering 7</h2>
+            <p class="center">
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem,
+              culpa suscipit error Lorem ipsum dolor sit, amet consectetur
+              adipisicing elit. Et qui, repudiandae similique nam, recusandae
+              quidem ab asperiores ex, aut fugit labore veritatis facere? sint
+              delectus ab dolorum nam. Debitis facere, incidunt voluptates eos,
+              mollitia voluptatem iste sunt voluptas beatae facilis labore,
+              omnis sint quae eum.
+            </p>
+          </div>
+          <div class="box">
+            <img
+              src="https://w0.peakpx.com/wallpaper/837/414/HD-wallpaper-cloudy-day-tree-nature-cloud-field.jpg"
+              alt=""
+            />
+            <h2 class="h-secondary center">Bulk Ordering 8</h2>
+            <p class="center">
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem,
+              culpa suscipit error Lorem ipsum dolor sit amet consectetur
+              adipisicing elit. Unde laudantium a incidunt animi ad, ab
+              dignissimos vero? Unde numquam odit repudiandae perferendis nisi.
+              sint delectus ab dolorum nam. Debitis facere, incidunt voluptates
+              eos, mollitia voluptatem iste sunt voluptas beatae facilis labore,
+              omnis sint quae eum.
+            </p>
+          </div>
+          <div class="box">
+            <img
+              src="https://cdn.pixabay.com/photo/2015/07/05/10/18/tree-832079_1280.jpg"
+              alt=""
+            />
+            <h2 class="h-secondary center">Food Ordering 9</h2>
+            <p class="center">
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem,
+              culpa suscipit error Lorem ipsum dolor sit amet consectetur
+              adipisicing elit. Necessitatibus provident fugiat aliquam minima
+              at explicabo. Earum eveniet quaerat, sunt molestias nesciunt quas!
+              Quis. sint delectus ab dolorum nam. Debitis facere, incidunt
+              voluptates eos, mollitia voluptatem iste sunt voluptas beatae
+              facilis labore, omnis sint quae eum.
+            </p>
+          </div>
+          <div class="box" id="last-box">
+            <img
+              src="https://cdn.pixabay.com/photo/2015/12/11/17/25/clouds-1088472_1280.jpg"
+              alt=""
+            />
+            <h2 class="h-secondary center">Food Catering 10</h2>
+            <p class="center">
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem,
+              culpa suscipit error Lorem ipsum dolor sit, amet consectetur
+              adipisicing elit. Et qui, repudiandae similique nam, recusandae
+              quidem ab asperiores ex, aut fugit labore veritatis facere? sint
+              delectus ab dolorum nam. Debitis facere, incidunt voluptates eos,
+              mollitia voluptatem iste sunt voluptas beatae facilis labore,
+              omnis sint quae eum.
+            </p>
+          </div>
         </div>
       </div>
     </section>
@@ -163,5 +288,9 @@
         All rights reserved!
       </div>
     </footer>
+
+    <!-- Script -->
+
+    <script src="./script.js"></script>
   </body>
 </html>
