--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
     <!-- logos -> logo-container  logos-slide -> logo-container-slide -->
     <section class="logo-container">
-      <!-- <h1 class="h-primary center">Our Services</h1> -->
+      <h1 class="h-primary center">Our Services</h1>
       <div id="services" class="logo-container-slide">
         <div class="hori-box">
           <div class="box" id="first-box">
