--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <!-- Add 10 new food cards and automatic Horizontal slider for dishes -->
 
     <!-- logos -> logo-container  logos-slide -> logo-container-slide -->
-    <section class="logo-container">
+    <section id="services-container" class="logo-container">
       <h1 class="h-primary center">Our Services</h1>
       <div id="services" class="logo-container-slide">
         <div class="hori-box">
@@ -54,7 +54,7 @@
               src="https://cdn.pixabay.com/photo/2015/12/11/17/25/clouds-1088472_1280.jpg"
               alt=""
             />
-            <h2 class="h-secondary center">Food Catering 1</h2>
+            <h2 class="h-secondary center">Food items 1</h2>
             <p class="center">
               Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem,
               culpa suscipit error Lorem ipsum dolor sit, amet consectetur
@@ -70,7 +70,7 @@
               src="https://w0.peakpx.com/wallpaper/837/414/HD-wallpaper-cloudy-day-tree-nature-cloud-field.jpg"
               alt=""
             />
-            <h2 class="h-secondary center">Bulk Ordering 2</h2>
+            <h2 class="h-secondary center">food items 2</h2>
             <p class="center">
               Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem,
               culpa suscipit error Lorem ipsum dolor sit amet consectetur
@@ -86,7 +86,7 @@
               src="https://cdn.pixabay.com/photo/2015/07/05/10/18/tree-832079_1280.jpg"
               alt=""
             />
-            <h2 class="h-secondary center">Food Ordering 3</h2>
+            <h2 class="h-secondary center">Food items 3</h2>
             <p class="center">
               Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem,
               culpa suscipit error Lorem ipsum dolor sit amet consectetur
@@ -102,7 +102,7 @@
               src="https://cdn.pixabay.com/photo/2015/12/11/17/25/clouds-1088472_1280.jpg"
               alt=""
             />
-            <h2 class="h-secondary center">Food Catering 4</h2>
+            <h2 class="h-secondary center">Food items 4</h2>
             <p class="center">
               Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem,
               culpa suscipit error Lorem ipsum dolor sit, amet consectetur
@@ -118,7 +118,7 @@
               src="https://w0.peakpx.com/wallpaper/837/414/HD-wallpaper-cloudy-day-tree-nature-cloud-field.jpg"
               alt=""
             />
-            <h2 class="h-secondary center">Bulk Ordering 5</h2>
+            <h2 class="h-secondary center">food items 5</h2>
             <p class="center">
               Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem,
               culpa suscipit error Lorem ipsum dolor sit amet consectetur
@@ -134,7 +134,7 @@
               src="https://cdn.pixabay.com/photo/2015/07/05/10/18/tree-832079_1280.jpg"
               alt=""
             />
-            <h2 class="h-secondary center">Food Ordering 6</h2>
+            <h2 class="h-secondary center">Food items 6</h2>
             <p class="center">
               Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem,
               culpa suscipit error Lorem ipsum dolor sit amet consectetur
@@ -150,7 +150,7 @@
               src="https://cdn.pixabay.com/photo/2015/12/11/17/25/clouds-1088472_1280.jpg"
               alt=""
             />
-            <h2 class="h-secondary center">Food Catering 7</h2>
+            <h2 class="h-secondary center">Food items 7</h2>
             <p class="center">
               Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem,
               culpa suscipit error Lorem ipsum dolor sit, amet consectetur
@@ -166,7 +166,7 @@
               src="https://w0.peakpx.com/wallpaper/837/414/HD-wallpaper-cloudy-day-tree-nature-cloud-field.jpg"
               alt=""
             />
-            <h2 class="h-secondary center">Bulk Ordering 8</h2>
+            <h2 class="h-secondary center">food items 8</h2>
             <p class="center">
               Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem,
               culpa suscipit error Lorem ipsum dolor sit amet consectetur
@@ -182,7 +182,7 @@
               src="https://cdn.pixabay.com/photo/2015/07/05/10/18/tree-832079_1280.jpg"
               alt=""
             />
-            <h2 class="h-secondary center">Food Ordering 9</h2>
+            <h2 class="h-secondary center">Food items 9</h2>
             <p class="center">
               Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem,
               culpa suscipit error Lorem ipsum dolor sit amet consectetur
@@ -198,7 +198,7 @@
               src="https://cdn.pixabay.com/photo/2015/12/11/17/25/clouds-1088472_1280.jpg"
               alt=""
             />
-            <h2 class="h-secondary center">Food Catering 10</h2>
+            <h2 class="h-secondary center">Food items 10</h2>
             <p class="center">
               Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem,
               culpa suscipit error Lorem ipsum dolor sit, amet consectetur
