new file:   img/food items img/1-veg fried rice.png 	new file:   img/food items img/2-veg-cutlet.png 	new file:   img/food items img/3-veg momo.png 	new file:   img/food items img/4-veg burger.png 	new file:   img/food items img/5-veg chilli panir.png 	new file:   img/food items img/6-Vegetarian-Chowmein.png 	new file:   img/food items img/7-veg-samosa.png 	new file:   img/food items img/8-pizza.png 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   </head>
 
   <body>
+    <!-- Navbar -->
     <nav id="navbar">
       <div id="logo">
         <img src="./logo-1.jpg" alt="MyOnlineMeal.com" />
@@ -30,6 +31,7 @@
       </ul>
     </nav>
 
+    <!-- Home -->
     <section id="home">
       <h1 class="h-primary">
         Welcome to <span class="h-primary-head">Veg-Meal-On</span>
@@ -42,18 +44,14 @@
       <button class="btn">Order Now</button>
     </section>
 
-    <!-- Add 10 new food cards and automatic Horizontal slider for dishes -->
-
+    <!-- Food items -->
     <!-- logos -> logo-container  logos-slide -> logo-container-slide -->
     <section id="services-container" class="logo-container">
       <h1 class="h-primary center">Our Services</h1>
       <div id="services" class="logo-container-slide">
         <div class="hori-box">
           <div class="box" id="first-box">
-            <img
-              src="https://cdn.pixabay.com/photo/2015/12/11/17/25/clouds-1088472_1280.jpg"
-              alt=""
-            />
+            <img src="./img/food items img/1-veg fried rice.png" alt="" />
             <h2 class="h-secondary center">Food items 1</h2>
             <p class="center">
               Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem,
@@ -66,10 +64,7 @@
             </p>
           </div>
           <div class="box">
-            <img
-              src="https://w0.peakpx.com/wallpaper/837/414/HD-wallpaper-cloudy-day-tree-nature-cloud-field.jpg"
-              alt=""
-            />
+            <img src="./img/food items img/2-veg-cutlet.png" alt="" />
             <h2 class="h-secondary center">food items 2</h2>
             <p class="center">
               Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem,
@@ -82,10 +77,7 @@
             </p>
           </div>
           <div class="box">
-            <img
-              src="https://cdn.pixabay.com/photo/2015/07/05/10/18/tree-832079_1280.jpg"
-              alt=""
-            />
+            <img src="./img/food items img/3-veg momo.png" alt="" />
             <h2 class="h-secondary center">Food items 3</h2>
             <p class="center">
               Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem,
@@ -98,10 +90,7 @@
             </p>
           </div>
           <div class="box">
-            <img
-              src="https://cdn.pixabay.com/photo/2015/12/11/17/25/clouds-1088472_1280.jpg"
-              alt=""
-            />
+            <img src="./img/food items img/4-veg burger.png" alt="" />
             <h2 class="h-secondary center">Food items 4</h2>
             <p class="center">
               Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem,
@@ -114,10 +103,7 @@
             </p>
           </div>
           <div class="box">
-            <img
-              src="https://w0.peakpx.com/wallpaper/837/414/HD-wallpaper-cloudy-day-tree-nature-cloud-field.jpg"
-              alt=""
-            />
+            <img src="./img/food items img/5-veg chilli panir.png" alt="" />
             <h2 class="h-secondary center">food items 5</h2>
             <p class="center">
               Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem,
@@ -130,10 +116,7 @@
             </p>
           </div>
           <div class="box">
-            <img
-              src="https://cdn.pixabay.com/photo/2015/07/05/10/18/tree-832079_1280.jpg"
-              alt=""
-            />
+            <img src="./img/food items img/6-Vegetarian-Chowmein.png" alt="" />
             <h2 class="h-secondary center">Food items 6</h2>
             <p class="center">
               Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem,
@@ -146,10 +129,7 @@
             </p>
           </div>
           <div class="box">
-            <img
-              src="https://cdn.pixabay.com/photo/2015/12/11/17/25/clouds-1088472_1280.jpg"
-              alt=""
-            />
+            <img src="./img/food items img/7-veg-samosa.png" alt="" />
             <h2 class="h-secondary center">Food items 7</h2>
             <p class="center">
               Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem,
@@ -162,10 +142,7 @@
             </p>
           </div>
           <div class="box">
-            <img
-              src="https://w0.peakpx.com/wallpaper/837/414/HD-wallpaper-cloudy-day-tree-nature-cloud-field.jpg"
-              alt=""
-            />
+            <img src="./img/food items img/8-pizza.png" alt="" />
             <h2 class="h-secondary center">food items 8</h2>
             <p class="center">
               Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem,
