--- a/index.html
+++ b/index.html
@@ -155,10 +155,7 @@
             </p>
           </div>
           <div class="box">
-            <img
-              src="https://cdn.pixabay.com/photo/2015/07/05/10/18/tree-832079_1280.jpg"
-              alt=""
-            />
+            <img src="./img/food items img/9-mater_paneer.png" alt="" />
             <h2 class="h-secondary center">Food items 9</h2>
             <p class="center">
               Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem,
@@ -171,10 +168,7 @@
             </p>
           </div>
           <div class="box" id="last-box">
-            <img
-              src="https://cdn.pixabay.com/photo/2015/12/11/17/25/clouds-1088472_1280.jpg"
-              alt=""
-            />
+            <img src="./img/food items img/10-tandoori-roti.png" alt="" />
             <h2 class="h-secondary center">Food items 10</h2>
             <p class="center">
               Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem,
