renamed:    img/food items img/8-pizza.png -> img/food items img/2-pizza.png 	modified:   img/food items img/3-veg momo.png 	new file:   img/food items img/8-veg-cutlet.png 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
         Welcome to <span class="h-primary-head">Veg-Meal-On</span>
       </h1>
       <p>
-        Meal-On is an online Veg-Food Delivery Website, where you can order your
-        breakfast and start a day with a smile.
+        Meal-On is an online Veg-Fastfood Delivery Website, where you can order
+        your breakfast and start a day with a smile.
       </p>
       <p>Order and get delivery in 25 minutes.</p>
       <button class="btn">Order Now</button>
@@ -64,7 +64,7 @@
             </p>
           </div>
           <div class="box">
-            <img src="./img/food items img/2-veg-cutlet.png" alt="" />
+            <img src="./img/food items img/2-pizza.png" alt="" />
             <h2 class="h-secondary center">food items 2</h2>
             <p class="center">
               Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem,
@@ -142,7 +142,7 @@
             </p>
           </div>
           <div class="box">
-            <img src="./img/food items img/8-pizza.png" alt="" />
+            <img src="./img/food items img/8-veg-cutlet.png" alt="" />
             <h2 class="h-secondary center">food items 8</h2>
             <p class="center">
               Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem,
